syntax = "proto3";
option java_package ="EmailNotificationSever.grpc";
service Mail{
  rpc Send(SendBody) returns(Response);
  rpc SlotBookingConfirmation(SlotConfirmation) returns(Response);
  rpc CustomerRegistration(Registration) returns(Response);
}
message SendBody{
  string recipients = 1;
  string subject = 2;
  string Text = 3;
}
message SlotConfirmation{
  string emailId=1;
  int32 customerId =2;
  int32 parkingSpaceId =3;
  int32 parkingLotId =4;
  string bookingId=5;
  double totalCost=6;
  string bookingStatus = 7;
}
message  Registration{
  string fullName =1;
  string username =2;
  int32 userId =3;
  string email_id =4;
  string password =5;
  string phoneNumber =6;
}

message Response{
  string responseMessage=1;
  int32 reponseCode=2;
}